# TITA-dynamic-obstacle-avoidance

./: .gitignore  README.md  pixi.toml  py_requirements.txt
MPC_SQP/: CMakeLists.txt
MPC_SQP/MPC_SQP_input_vel/: MPC.hpp  animate.py  main.cpp
MPC_SQP/MP_SQP_input acc/: MPC.cpp  MPC.hpp  animate.py  main.cpp
MPC_open_loop/DDP_warmstart/: MPC.cpp  MPC.hpp  main.cpp
MPC_open_loop/MPC_CROCODDYL/: CMakeLists.txt  DFIPActionModel.hpp  MPC.cpp  MPC.hpp  UnicycleModel.hpp  animate.py  main.cpp  theta_animation.py  walkingPlanner.hpp
MPC_open_loop/MPC_DDP/: CMakeLists.txt  DdpSolver.hpp  MPC.cpp  MPC.hpp  animate.py  main.cpp
MPC_open_loop/MPC_IPOPT/: CMakeLists.txt  MPC.cpp  MPC.hpp  animate.py  main.cpp
MPC_open_loop/MPC_SQP/MPC_SQP_input_vel/: MPC.cpp
MPC_open_loop/MPC_SQP/MP_SQP_input acc/: MPC.cpp  MPC.hpp  animate.py
MPC_open_loop/MPC_SRB/: CMakeLists.txt  DFIPActionModel.hpp  MPC.cpp  MPC.hpp  main.cpp  utils.cpp  walkingPlanner.hpp
MPC_open_loop/MPC_SRB/python_src/: animate.py  theta_animation.py
TITA_MJ/: CMakeLists.txt  MujocoUI.hpp  README.md  main.cpp  main_with_Filter.cpp
TITA_MJ/include/: DFIPActionModel.hpp  DdpSolver.hpp  DesiredConfiguration.hpp  Logger.hpp  MPC.hpp  RobotState.hpp  StateFilter.hpp  WalkingManager.hpp  WholeBodyController.hpp  utils.hpp  walkingPlanner.hpp
TITA_MJ/include/labrob_qpsolvers/: HPIPMQPSolver.hpp  QPOASESQPSolver.hpp
TITA_MJ/python_script/: animate.py  animate_MPC.py  plot_LIP.py  plot_MPC.py  plot_filter_estimate.py  plot_plan.py  plot_tau.py  plot_timings.py  plot_trackin_position_error.py  theta_animation.py
TITA_MJ/src/: JointCommand.cpp  JointState.cpp  MPC.cpp  RobotState.cpp  WalkingManager.cpp  WholeBodyController.cpp  utils.cpp
TITA_MJ/tita_mj_description/: tita.mjcf  tita_world.xml
TITA_controller/: CMakeLists.txt  README.md  package.xml
TITA_controller/src/: controller_node.cpp  robot_simulator.cpp
log/: latest_build
tita_controller/: CMakeLists.txt  README.md  package.xml
tita_controller/config/: gains.yaml
tita_controller/include/: DFIPActionModel.hpp  DesiredConfiguration.hpp  LQR.hpp  Logger.hpp  MPC.hpp  MujocoUI.hpp  RobotOdometry.hpp  RobotOdometryAng.hpp  StateFilter_no_bias.hpp  WalkingManager.hpp  Wheel_KF.hpp  WholeBodyController.hpp  utils.hpp  walkingPlanner.hpp
tita_controller/launch/: controller.launch.py
tita_controller/python_src/: 2D_plot.py  _exp.py  animate.py  plot.py  plot_encoder_wheel.py  plot_estimate.py  plot_filter_estimate.py  plot_imu.py  plot_numeric_derivative.py  plot_odom.py  plot_plan.py  plot_robot_odometry.py  plot_tau.py  plot_timings.py  plot_trackin_position_error.py  plot_vel_control.py  plot_wheel_error.py  tau_comparison.py  theta_animation.py
tita_controller/python_src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tita_controller/python_src/log/: latest_build
tita_controller/src/: MPC.cpp  WalkingManager.cpp  WholeBodyController.cpp  control_manager.cpp  controller_node.cpp  controller_node_sim.cpp  robot_simulator.cpp  utils.cpp
